# StickerMaker

./: .gitignore  README.MD  app.py  sticker.py
data/: config.json.tmpl
shengyin/: CMakeLists.txt  main.cpp
shengyin/include/: shengyin.h
shengyin/sources/: shengyin.cpp
